2016-09-19  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.2.3e (evolution of 6.2.3).
	* doc/version.texi: version 6.2.3e.

2016-09-18  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: copyright year 2016.
	* configure.ac: version 6.2.3.
	* NEWS: version 6.2.3.
	* TODO: version 6.2.3.
	* doc/gnuchess.texi: version 6.2.3.
	* doc/version.texi: version 6.2.3.
	* po/*.po: update.
	* po/zh_CN.po: added.
	* po/LINGUAS: added zh_CN.

2015-10-18  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.2.2e (evolution of 6.2.2).
	* doc/version.texi: version 6.2.2e.
	* src/main.cc: set QUIT flag for -a option (--addbook).

2015-10-17  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.2.2.
	* NEWS: version 6.2.2.
	* TODO: version 6.2.2.
	* doc/version.texi: version 6.2.2.

2015-10-13  Antonio Ceballos  <aceballos@gmail.com>

	* po/es.po: update.
	* po/fr.po: added.
	* po/nl.po: update.
	* po/uk.po: update.
	* po/vi.po: update.
	* po/LINGUAS: added fr.

2015-10-10  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/engine.cc: robust program exit concerning threads.
	* src/adapter/main.cpp: robust program exit concerning threads.
	* src/engine/protocol.cpp: robust program exit concerning threads.
	* src/main.cc: robust program exit concerning threads.
	* src/components.cc: robust program exit concerning threads.
	* src/components.h: robust program exit concerning threads.
	* TODO: new tasks.
	* configure.ac: set version 6.2.2-rc1.
	* doc/version.texi: version 6.2.2-rc1.

2015-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* src/adapter/fen.cpp: detailed error messages for bad FEN syntax.

2015-04-05  Antonio Ceballos  <aceballos@gmail.com>

	* po/es.po: small corrections in Spanish translation.

2015-01-25  Antonio Ceballos  <aceballos@gmail.com>

	* configure.ac: version 6.2.1e (evolution of 6.2.1).
	* doc/version.texi: version 6.2.1e.
	* src/main.cc: mark translatable strings.